[package]
name = "mozjs"
description = "Rust bindings to the Mozilla SpiderMonkey JavaScript engine."
repository = "https://github.com/servo/rust-mozjs"
version = "0.1.12"
authors = ["The Servo Project Developers"]
build = "build.rs"
license = "MPL-2.0"

[build-dependencies]
cmake = "0.1"

[[test]]
name = "callback"
[[test]]
name = "capture_stack"
[[test]]
name = "custom_auto_rooter"
[[test]]
name = "custom_auto_rooter_macro"
[[test]]
name = "enumerate"
[[test]]
name = "evaluate"
[[test]]
name = "panic"
[[test]]
name = "rooting"
[[test]]
name = "runtime"
[[test]]
name = "typedarray"
[[test]]
name = "stack_limit"
[[test]]
name = "vec_conversion"

[lib]
doctest = false

[features]
debugmozjs = ['mozjs_sys/debugmozjs']
promises = ['mozjs_sys/promises']

[dependencies]
lazy_static = "1"
libc = "0.2"
log = "0.4"
num-traits = "0.1.32"
mozjs_sys = "0.50.0"
